# wms

./: .dockerignore  .gitignore  DEVELOPMENT.md  MANIFEST.in  QUICK_START.md  README.md  pyproject.toml  setup.cfg  setup.py
wms/: api.py  hooks.py  install.py  patches.txt
wms/config/: desktop.py  docs.py
wms/custom_fields/: pick_list.json
wms/events/: delivery_note.py  pick_list.py  stock_entry.py
wms/fixtures/: custom_field.json
wms/public/css/: wms.css
wms/public/js/: delivery_note.js  pick_list.js  pick_list_list.js  stock_entry.js  wms.js
wms/wms/doctype/wms_package/: __init__.py  wms_package.json  wms_package.py
wms/wms/doctype/wms_pick_session/: wms_pick_session.json  wms_pick_session.py
wms/wms/doctype/wms_scan_step/: wms_scan_step.json  wms_scan_step.py
wms/wms/doctype/wms_settings/: wms_settings.json  wms_settings.py
wms/wms/doctype/wms_shipment/: __init__.py  wms_shipment.js  wms_shipment.json  wms_shipment.py
wms/wms/page/pack/: __init__.py  pack.css  pack.js  pack.json
wms/wms/page/pick/: pick.css  pick.js  pick.json
wms/wms/page/pick_optimization/: pick_optimization.css  pick_optimization.js  pick_optimization.json
wms/wms/page/wms_dashboard/: wms_dashboard.css  wms_dashboard.js  wms_dashboard.json
wms/wms/workspace/wms/: wms.json
wms/www/pick-optimization/: index.html  index.py
