[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wms"
authors = [
    {name = "Your Company", email = "your@email.com"}
]
description = "Warehouse Management System Optimization for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
    "erpnext"
]

[project.urls]
Home = "https://github.com/marsan957/wms"
Repository = "https://github.com/marsan957/wms"

[tool.bench.app]
name = "wms"
title = "WMS"
description = "Warehouse Management System Optimization for ERPNext"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
