[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wms"
version = "0.0.1"
authors = [
    {name = "Your Company", email = "your@email.com"}
]
description = "Warehouse Management System Optimization for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.urls]
Home = "https://github.com/marsan957/wms"
Repository = "https://github.com/marsan957/wms"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
